# BigMixSolDB

./: .env.example  .gitignore  README.md  pyproject.toml
data/: bigsoldb_densities.csv  name_to_smiles.json
data/test/: 10.1007_s10953-019-00861-7.yml  10.1016_j.cjche.2014.03.006.yml  10.1016_j.cjche.2020.10.037.yml  10.1016_j.jct.2017.07.023.yml  10.1016_j.jct.2023.107064.yml  10.1016_j.jct.2023.107231.yml  10.1016_j.molliq.2013.07.014.yml  10.1016_j.molliq.2016.03.021.yml  10.1016_j.molliq.2016.07.007.yml  10.1016_j.molliq.2018.07.019.yml  10.1016_j.molliq.2018.10.109.yml  10.1016_j.molliq.2020.114671.yml  10.1016_j.molliq.2020.115095.yml  10.1016_j.molliq.2023.121532.yml  10.1021_acs.jced.0c00633.yml  10.1021_acs.jced.1c00247.yml  10.1021_acs.jced.1c00385.yml  10.1021_acs.jced.1c00485.yml  10.1021_acs.jced.2c00133.yml  10.1021_acs.jced.3c00349.yml  10.1021_acs.jced.9b01020.yml  10.1021_je401044h.yml  10.1021_je800120p.yml  10.1021_je900646u.yml
data/train/: 10.1021_acs.jced.1c00062.yml  10.1021_acs.jced.5b00190.yml  10.1021_acs.jced.5b00870.yml  10.1021_acs.jced.7b00542.yml  10.1021_acs.jced.8b00126.yml  10.1021_acs.jced.8b00560.yml  10.1021_acs.jced.8b00581.yml  10.1021_acs.jced.8b00632.yml  (+35 more)
prompts/: extract_yaml_prompt.txt  train_yaml_prompt.txt
scripts/: build_csv.py  compare_csv.py  convert_docling.py  convert_vlm.py  create_finetune_dataset.py  deduplicate_cross_doi.py  extract_molecule_names.py  extract_yaml.py  finetune.py  postprocess_yaml.py  prefetch_densities.py  resolve_molecules.py  standardize_solvent_names.py  start_vlm_server.sh
(+41 files in other folders)
