[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bigmixsoldb"
version = "0.1.0"
description = "LLM workflow for extracting solubility data from scientific documents"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "docling>=2.15.0,<2.84.0",
  "pandas>=2.2.0,<3.0.2",
  "Pillow>=10.3.0,<12.2.0",
  "pypdfium2>=4.30.0,<5.6.0",
  "PyYAML>=6.0.2,<6.0.3",
  "rdkit>=2024.3.6,<2025.9.6",
  "requests>=2.32.0,<2.33.1",
  "tqdm>=4.66.0,<4.67.3",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.11.0",
]
finetune = [
  "accelerate>=1.5.0,<2.0.0",
  "datasets>=3.4.0,<4.0.0",
  "transformers>=4.49.0,<5.0.0",
  "trl>=0.17.0,<1.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
